# Bekas-Project-TFH

./: .codeclimate.yaml  .gitignore  README.md  dev_setup.sh  new_file.md  pyproject.toml  template.yaml
notebooks/: Twillio API.ipynb
