[tool.poetry]
name = "bekas-project"
version = "0.0.1"
description = "Dev environment for Chatbot"
authors = ["Beka Burton"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.16.1"
aws-xray-sdk = "^2.6.0"
aws-lambda-powertools = "^1.6.1"
requests = "^2.24.0"
moto = "^1.3.16"
numpy = "^1.19.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
black = "^20.8b1"
pylint = "^2.6.0"
poetry-dynamic-versioning = "^0.10.0"
aws-lambda-context = "^1.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
